--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -37,7 +37,7 @@ jobs:
           RELEASE_VERSION_NAME="v$CURRENT_VERSION_NAME+${GITHUB_SHA:0:7}" # The "+" is necessary so that versioning precedence is not affected
           APK_DIR_PATH="./app/build/outputs/apk/debug"
           APK_VERSION_TAG="$RELEASE_VERSION_NAME+${{ env.PACKAGE_VARIANT }}-github-debug"
-          APK_BASENAME_PREFIX="termux-app_$APK_VERSION_TAG"
+          APK_BASENAME_PREFIX="XoDos_$APK_VERSION_TAG"
 
           echo "Building APKs for 'APK_VERSION_TAG' release"
           export TERMUX_APK_VERSION_TAG="$APK_VERSION_TAG" # Used by app/build.gradle
@@ -57,9 +57,12 @@ jobs:
         with:
           name: ${{ matrix.package_variant }}
           path: ./app/build/outputs/apk/debug/*.apk
+
   upload:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      contents: write
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -69,8 +72,8 @@ jobs:
         uses: termux/upload-release-action@v4.1.0
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: "**/*.apk"
+          file: ./app/build/outputs/apk/debug/*.apk
           file_glob: true
-          release_name: "v1.0.5"
-          tag: 1.0.5
+          release_name: ${{ env.RELEASE_VERSION_NAME }}  
+          tag: ${{ env.RELEASE_VERSION_NAME }} 
           checksums: sha256,sha512,md5
