--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -17,9 +17,12 @@ jobs:
       - name: Clone repository and submodules
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}  # Fix: Use `github.ref` instead of `env.GITHUB_REF`
+          ref: ${{ github.ref }}  
           submodules: 'recursive'  # Ensure submodules are cloned
           token: ${{ secrets.GITHUB_TOKEN }}  # Required for private submodules
+
+ - name: Make Gradle Wrapper executable
+        run: chmod +x ./gradlew
 
       - name: Initialize/Update Submodules
         run: |
@@ -43,7 +46,7 @@ jobs:
           RELEASE_VERSION_NAME="v$CURRENT_VERSION_NAME+${GITHUB_SHA:0:7}" # The "+" is necessary so that versioning precedence is not affected
           APK_DIR_PATH="./app/build/outputs/apk/debug"
           APK_VERSION_TAG="$RELEASE_VERSION_NAME+${{ env.PACKAGE_VARIANT }}-github-debug"
-          APK_BASENAME_PREFIX="XoDos_$APK_VERSION_TAG"
+          APK_BASENAME_PREFIX="termux-app_$APK_VERSION_TAG"
 
           echo "Building APKs for 'APK_VERSION_TAG' release"
           export TERMUX_APK_VERSION_TAG="$APK_VERSION_TAG" # Used by app/build.gradle
