--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package_variant: [ apt-android-7, apt-android-5 ]
+        package_variant: [apt-android-7, apt-android-5]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -17,11 +17,11 @@ jobs:
       - name: Clone repository and submodules
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}  
-          submodules: 'recursive'  
+          ref: ${{ github.ref }}
+          submodules: 'recursive'
           token: ${{ secrets.GITHUB_TOKEN }}
 
- - name: Make Gradle Wrapper executable
+      - name: Make Gradle Wrapper executable
         run: chmod +x ./gradlew
 
       - name: Initialize/Update Submodules
@@ -36,31 +36,30 @@ jobs:
           distribution: "temurin"
 
       - name: Build
-        shell: bash {0}
+        shell: bash
         env:
           PACKAGE_VARIANT: ${{ matrix.package_variant }}
         run: |
-          # Set RELEASE_VERSION_NAME to "<CURRENT_VERSION_NAME>+<last_commit_hash>"
           CURRENT_VERSION_NAME_REGEX='\s+versionName "([^"]+)"$'
-          CURRENT_VERSION_NAME="$(grep -m 1 -E "$CURRENT_VERSION_NAME_REGEX" ./app/build.gradle | sed -r "s/$CURRENT_VERSION_NAME_REGEX/\1/")"
-          RELEASE_VERSION_NAME="v$CURRENT_VERSION_NAME+${GITHUB_SHA:0:7}" # The "+" is necessary so that versioning precedence is not affected
+          CURRENT_VERSION_NAME=$(grep -m 1 -E "$CURRENT_VERSION_NAME_REGEX" ./app/build.gradle | sed -r "s/$CURRENT_VERSION_NAME_REGEX/\1/")
+          RELEASE_VERSION_NAME="v${CURRENT_VERSION_NAME}+${GITHUB_SHA:0:7}"
           APK_DIR_PATH="./app/build/outputs/apk/debug"
-          APK_VERSION_TAG="$RELEASE_VERSION_NAME+${{ env.PACKAGE_VARIANT }}-github-debug"
-          APK_BASENAME_PREFIX="termux-app_$APK_VERSION_TAG"
+          APK_VERSION_TAG="${RELEASE_VERSION_NAME}+${{ matrix.package_variant }}-github-debug"
+          APK_BASENAME_PREFIX="termux-app_${APK_VERSION_TAG}"
 
-          echo "Building APKs for 'APK_VERSION_TAG' release"
-          export TERMUX_APK_VERSION_TAG="$APK_VERSION_TAG" # Used by app/build.gradle
-          export TERMUX_PACKAGE_VARIANT="${{ env.PACKAGE_VARIANT }}" # Used by app/build.gradle
+          echo "RELEASE_VERSION_NAME=${RELEASE_VERSION_NAME}" >> $GITHUB_ENV
+          
+          echo "Building APKs for ${APK_VERSION_TAG} release"
           ./gradlew assembleDebug
 
           echo "Validating APKs"
           for abi in universal arm64-v8a armeabi-v7a x86_64 x86; do
-            if ! test -f "$APK_DIR_PATH/${APK_BASENAME_PREFIX}_$abi.apk"; then
-              files_found="$(ls "$APK_DIR_PATH")"
-              echo "Failed to find built APK at '$APK_DIR_PATH/${APK_BASENAME_PREFIX}_$abi.apk'. Files found: "$'\n'"$files_found"
+            if ! test -f "${APK_DIR_PATH}/${APK_BASENAME_PREFIX}_${abi}.apk"; then
+              echo "APK not found: ${APK_DIR_PATH}/${APK_BASENAME_PREFIX}_${abi}.apk"
               exit 1
             fi
           done
+
       - name: Upload APKs to GitHub artifact
         uses: actions/upload-artifact@v4
         with:
@@ -77,12 +76,13 @@ jobs:
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
+
       - name: Upload APKs to release
         uses: termux/upload-release-action@v4.1.0
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./app/build/outputs/apk/debug/*.apk
-          file_glob: true
-          release_name: ${{ env.RELEASE_VERSION_NAME }}  
-          tag: ${{ env.RELEASE_VERSION_NAME }} 
+          tag: ${{ needs.build.outputs.release_version }}
+          release_name: ${{ needs.build.outputs.release_version }}
           checksums: sha256,sha512,md5
+          create_release: true
