--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -9,25 +9,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package_variant: [apt-android-7, apt-android-5]
+        package_variant: [ apt-android-7, apt-android-5 ]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
-      - name: Clone repository and submodules
+      - name: Clone repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}
-          submodules: 'recursive'
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Make Gradle Wrapper executable
-        run: chmod +x ./gradlew
-
-      - name: Initialize/Update Submodules
-        run: |
-          git submodule sync
-          git submodule update --init --recursive
+          ref: ${{ env.GITHUB_REF }}
+          submodules: 'true'
 
       - name: Set up Java
         uses: actions/setup-java@v4
@@ -36,53 +27,50 @@ jobs:
           distribution: "temurin"
 
       - name: Build
-        shell: bash
+        shell: bash {0}
         env:
           PACKAGE_VARIANT: ${{ matrix.package_variant }}
         run: |
+          # Set RELEASE_VERSION_NAME to "<CURRENT_VERSION_NAME>+<last_commit_hash>"
           CURRENT_VERSION_NAME_REGEX='\s+versionName "([^"]+)"$'
-          CURRENT_VERSION_NAME=$(grep -m 1 -E "$CURRENT_VERSION_NAME_REGEX" ./app/build.gradle | sed -r "s/$CURRENT_VERSION_NAME_REGEX/\1/")
-          RELEASE_VERSION_NAME="v${CURRENT_VERSION_NAME}+${GITHUB_SHA:0:7}"
+          CURRENT_VERSION_NAME="$(grep -m 1 -E "$CURRENT_VERSION_NAME_REGEX" ./app/build.gradle | sed -r "s/$CURRENT_VERSION_NAME_REGEX/\1/")"
+          RELEASE_VERSION_NAME="v$CURRENT_VERSION_NAME+${GITHUB_SHA:0:7}" # The "+" is necessary so that versioning precedence is not affected
           APK_DIR_PATH="./app/build/outputs/apk/debug"
-          APK_VERSION_TAG="${RELEASE_VERSION_NAME}+${{ matrix.package_variant }}-github-debug"
-          APK_BASENAME_PREFIX="termux-app_${APK_VERSION_TAG}"
+          APK_VERSION_TAG="$RELEASE_VERSION_NAME+${{ env.PACKAGE_VARIANT }}-github-debug"
+          APK_BASENAME_PREFIX="termux-app_$APK_VERSION_TAG"
 
-          echo "RELEASE_VERSION_NAME=${RELEASE_VERSION_NAME}" >> $GITHUB_ENV
-          
-          echo "Building APKs for ${APK_VERSION_TAG} release"
+          echo "Building APKs for 'APK_VERSION_TAG' release"
+          export TERMUX_APK_VERSION_TAG="$APK_VERSION_TAG" # Used by app/build.gradle
+          export TERMUX_PACKAGE_VARIANT="${{ env.PACKAGE_VARIANT }}" # Used by app/build.gradle
           ./gradlew assembleDebug
 
           echo "Validating APKs"
           for abi in universal arm64-v8a armeabi-v7a x86_64 x86; do
-            if ! test -f "${APK_DIR_PATH}/${APK_BASENAME_PREFIX}_${abi}.apk"; then
-              echo "APK not found: ${APK_DIR_PATH}/${APK_BASENAME_PREFIX}_${abi}.apk"
+            if ! test -f "$APK_DIR_PATH/${APK_BASENAME_PREFIX}_$abi.apk"; then
+              files_found="$(ls "$APK_DIR_PATH")"
+              echo "Failed to find built APK at '$APK_DIR_PATH/${APK_BASENAME_PREFIX}_$abi.apk'. Files found: "$'\n'"$files_found"
               exit 1
             fi
           done
-
       - name: Upload APKs to GitHub artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.package_variant }}
           path: ./app/build/outputs/apk/debug/*.apk
-
   upload:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      contents: write
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
-
       - name: Upload APKs to release
         uses: termux/upload-release-action@v4.1.0
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./app/build/outputs/apk/debug/*.apk
-          tag: ${{ needs.build.outputs.release_version }}
-          release_name: ${{ needs.build.outputs.release_version }}
+          file: "**/*.apk"
+          file_glob: true
+          release_name: "v1.0.5"
+          tag: 1.0.5
           checksums: sha256,sha512,md5
-          create_release: true
