--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+//   include 'armeabi-v7a', 'arm64-v8a'
+
 plugins {
     id "com.android.application"
 }
@@ -15,24 +17,32 @@ ext {
     packageVariant = System.getenv("TERMUX_PACKAGE_VARIANT") ?: "apt-android-7" // Default: "apt-android-7"
 }
 
+
 android {
     buildFeatures {
         viewBinding true
     }
+    
+    
+    
     namespace "com.termux"
     compileSdk project.properties.compileSdkVersion.toInteger()
 //    compileSdk 34
-    ndkVersion '25.1.8937393'
+    ndkVersion '27.1.12297006'
     def appVersionName = System.getenv("TERMUX_APP_VERSION_NAME") ?: ""
     def apkVersionTag = System.getenv("TERMUX_APK_VERSION_TAG") ?: ""
     def splitAPKsForDebugBuilds = System.getenv("TERMUX_SPLIT_APKS_FOR_DEBUG_BUILDS") ?: "1"
     def splitAPKsForReleaseBuilds = System.getenv("TERMUX_SPLIT_APKS_FOR_RELEASE_BUILDS") ?: "0" // F-Droid does not support split APKs #1904
-
-    aaptOptions {
-        noCompress 'tar.xz'
-}
     
+aaptOptions {
+        noCompress 'tar.xz'
+    }
+    
+    
+
     dependencies {
+ 
+
         implementation "androidx.annotation:annotation:1.3.0"
         implementation "androidx.core:core:1.6.0"
         implementation "androidx.drawerlayout:drawerlayout:1.1.1"
@@ -58,7 +68,7 @@ android {
         minSdkVersion project.properties.minSdkVersion.toInteger()
         targetSdkVersion project.properties.targetSdkVersion.toInteger()
         versionCode 5
-        versionName "5.1.0"
+        versionName "5.0.0"
 
         if (appVersionName) versionName = appVersionName
         validateVersionName(versionName)
@@ -162,6 +172,12 @@ android {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-compress:1.23.0'
+    implementation 'com.github.luben:zstd-jni:1.5.2-3@aar'
+    implementation 'org.tukaani:xz:1.7'
+ //   implementation 'org.apache.commons:commons-compress:1.20'
+// implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // Other dependencies...
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
@@ -237,6 +253,7 @@ clean {
 }
 
 task downloadBootstraps() {
+return;
     doLast {
         def packageVariant = project.ext.packageVariant
         if (packageVariant == "apt-android-7") {
