Update and rename Release to Release.yml

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -3,17 +3,6 @@ name: Upload XoDos Release
 on:
   push:
     tags:
-      - '5.1.0'  # Trigger when 5.1.0 tag is created
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-   name: Upload XoDos Release
-
-on:
-  push:
-    tags:
       - '5.1.0'
 
 jobs:
@@ -22,17 +11,13 @@ jobs:
     steps:
       - name: Download APK
         run: |
-          # Choose ONE method below:
-          
-          # Option 1: Google Drive (using gdown)
           pip install gdown
           gdown "13SiZvv2qd1WIdeS-t0C_MzdP78OpAR3w" -O XoDos-5.1.0-full_arm64-v8a.apk
-          
-          # Option 2: MediaFire (using wget)
-          # wget --trust-server-names --content-disposition "https://download.mediafire.com/zhzehejjl34gr98/XoDos-5.1.0-full_arm64-v8a.apk"
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref_name }}
           name: XoDos ${{ github.ref_name }}
@@ -55,7 +40,4 @@ jobs:
             Discord: https://discord.gg/d2ChVhPfnF
             
             Thank you for choosing XoDos by xodios M.aleiw
-          files: |
-            XoDos-5.1.0-full_arm64-v8a.apk
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          files: XoDos-5.1.0-full_arm64-v8a.apk
