--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -1,6 +1,12 @@
 name: Upload XoDos Release
 
 on:
+  workflow_dispatch:    # Allows manual triggering
+    inputs:
+      version_tag:
+        description: 'Version tag (e.g., 5.1.0)' 
+        required: true
+        default: '5.1.0'
   push:
     tags:
       - '5.1.0'
@@ -13,14 +19,14 @@ jobs:
         run: |
           pip install gdown
           gdown "13SiZvv2qd1WIdeS-t0C_MzdP78OpAR3w" -O XoDos-5.1.0-full_arm64-v8a.apk
-
+          
       - name: Create Release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref_name }}
-          name: XoDos ${{ github.ref_name }}
+          files: XoDos-5.1.0-full_arm64-v8a.apk
           body: |
             New Exodus release for arm64
             What's new?
@@ -40,4 +46,7 @@ jobs:
             Discord: https://discord.gg/d2ChVhPfnF
             
             Thank you for choosing XoDos by xodios M.aleiw
-          files: XoDos-5.1.0-full_arm64-v8a.apk
+          files: |
+            XoDos-5.1.0-full_arm64-v8a.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
