--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version_tag:
-        description: 'Version5.1.0"
+        description: 'Version5.1.0'
         required: true
         default: '5.1.0.full'
 
