--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       version_tag:
-        description: 'Version5.1.0'
+        description: 'Version tag full (5.1.0.r1)'
         required: true
-        default: '5.1.0.full'
+        default: '5.1.0.r1'
 
 permissions:
   contents: write
@@ -17,8 +17,6 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Create Git Tag
         run: |
@@ -27,14 +25,16 @@ jobs:
           git tag ${{ github.event.inputs.version_tag }}
           git push origin ${{ github.event.inputs.version_tag }}
 
-      - name: Download APK
+      - name: Download APK (Google Drive)
         run: |
           pip install gdown
-          gdown "13SiZvv2qd1WIdeS-t0C_MzdP78OpAR3w" -O XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk || exit 1
-          
-          # Verify download
-          ls -lh XoDos-*.apk
-          file XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk
+          gdown "13SiZvv2qd1WIdeS-t0C_MzdP78OpAR3w" -O XoDos-${{ github.event.inputs.version_tag }}.apk
+
+      
+      - name: Verify APK
+        run: |
+          ls -lh *.apk
+          file *.apk
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -42,5 +42,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.event.inputs.version_tag }}
-          files: |
-            ./XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk
+          files: XoDos-${{ github.event.inputs.version_tag }}.apk
