--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,9 @@
-custom: https://github.com/xodiosx/XoDos
+custom: https://github.com/xodiosx/XoDos6
+** XoDos **
+** please support ❤️ this project to grow **
+"I can only receive cryptocurrency through the Polygon network. 
+My account details are as follows:
+- Network: Polygon 
+- Coin name: USDT
+
+- Address: `0x046ac894C15fcC88D492835445938291c00DD0a7`
