--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,9 +1,9 @@
-custom: https://github.com/xodiosx/XoDos6
-** XoDos **
-** please support ❤️ this project to grow **
-"I can only receive cryptocurrency through the Polygon network. 
-My account details are as follows:
-- Network: Polygon 
-- Coin name: USDT
+[**XoDos Project**](https://github.com/xodiosx/XoDos6) ❤️  
+*Your support helps this project grow!*
 
-- Address: `0x046ac894C15fcC88D492835445938291c00DD0a7`
+**Crypto Donations (Polygon Network Only):**  
+- Network: Polygon  
+- Coin: USDT (ERC-20)  
+- Address: `0x046ac894C15fcC88D492835445938291c00DD0a7`  
+
+⚠️ **Important**: Only send USDT via Polygon network. Other networks may result in permanent loss.
