--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,9 +1,1 @@
-[**XoDos Project**](https://github.com/xodiosx/XoDos6) ❤️  
-*Your support helps this project grow!*
-
-**Crypto Donations (Polygon Network Only):**  
-- Network: Polygon  
-- Coin: USDT (ERC-20)  
-- Address: `0x046ac894C15fcC88D492835445938291c00DD0a7`  
-
-⚠️ **Important**: Only send USDT via Polygon network. Other networks may result in permanent loss.
+custom: https://github.com/xodiosx/XoDos6#support
