--- a/.github/workflows/debug_build.yml
+++ b/.github/workflows/debug_build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package_variant: [ apt-android-7, apt-android-5 ]
+        package_variant: [apt-android-7, apt-android-5]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -17,11 +17,11 @@ jobs:
       - name: Clone repository and submodules
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}  
-          submodules: 'recursive'  # Ensure submodules are cloned
-          token: ${{ secrets.GITHUB_TOKEN }}  # Required for private submodules
+          ref: ${{ github.ref }}
+          submodules: 'recursive'
+          token: ${{ secrets.GITHUB_TOKEN }}
 
- - name: Make Gradle Wrapper executable
+      - name: Make Gradle Wrapper executable
         run: chmod +x ./gradlew
 
       - name: Initialize/Update Submodules
@@ -40,19 +40,19 @@ jobs:
         env:
           PACKAGE_VARIANT: ${{ matrix.package_variant }}
         run: |
-          # Set RELEASE_VERSION_NAME to "<CURRENT_VERSION_NAME>+<last_commit_hash>"
           CURRENT_VERSION_NAME_REGEX='\s+versionName "([^"]+)"$'
           CURRENT_VERSION_NAME="$(grep -m 1 -E "$CURRENT_VERSION_NAME_REGEX" ./app/build.gradle | sed -r "s/$CURRENT_VERSION_NAME_REGEX/\1/")"
-          RELEASE_VERSION_NAME="v$CURRENT_VERSION_NAME+${GITHUB_SHA:0:7}" # The "+" is necessary so that versioning precedence is not affected
+          RELEASE_VERSION_NAME="v$CURRENT_VERSION_NAME+${GITHUB_SHA:0:7}"
           APK_DIR_PATH="./app/build/outputs/apk/debug"
           APK_VERSION_TAG="$RELEASE_VERSION_NAME+${{ env.PACKAGE_VARIANT }}-github-debug"
-          APK_BASENAME_PREFIX="termux-app_$APK_VERSION_TAG"
-
+          APK_BASENAME_PREFIX="XoDos-app_$APK_VERSION_TAG"
+          
           echo "Building APKs for 'APK_VERSION_TAG' release"
-          export TERMUX_APK_VERSION_TAG="$APK_VERSION_TAG" # Used by app/build.gradle
-          export TERMUX_PACKAGE_VARIANT="${{ env.PACKAGE_VARIANT }}" # Used by app/build.gradle
+          export TERMUX_APK_VERSION_TAG="$APK_VERSION_TAG"
+          export TERMUX_PACKAGE_VARIANT="${{ matrix.package_variant }}"
+          
           ./gradlew assembleDebug
-
+          
           echo "Validating APKs"
           for abi in universal arm64-v8a armeabi-v7a x86_64 x86; do
             if ! test -f "$APK_DIR_PATH/${APK_BASENAME_PREFIX}_$abi.apk"; then
@@ -61,6 +61,7 @@ jobs:
               exit 1
             fi
           done
+
       - name: Upload APKs to GitHub artifact
         uses: actions/upload-artifact@v4
         with:
@@ -72,17 +73,16 @@ jobs:
     needs: build
     permissions:
       contents: write
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
+        
       - name: Upload APKs to release
         uses: termux/upload-release-action@v4.1.0
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./app/build/outputs/apk/debug/*.apk
           file_glob: true
-          release_name: ${{ env.RELEASE_VERSION_NAME }}  
-          tag: ${{ env.RELEASE_VERSION_NAME }} 
-          checksums: sha256,sha512,md5
+          release_name: ${{ needs.build.outputs.release_version }}
+          tag: ${{ needs.build.outputs.release_version }}
+          checksums: sha256,sha512,md5￼Enter
