--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -43,7 +43,7 @@ jobs:
           name: XoDos ${{ github.event.inputs.version_tag }}
           files: |
             XoDos-${{ github.event.inputs.version_tag }}-full_arm64-v8a.apk
-            XoDos-debian.tar.xz
+            XoDos-ubuntu.tar.xz
           body: | 
             New XoDos release for arm64
             What's new?
