--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       version_tag:
-        description: 'Version tag (5.3.0)'
+        description: 'Version tag (v5.3.0)'
         required: true
-        default: '5.3.0'
+        default: 'v5.3.0'
 
 permissions:
   contents: write
