--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -10,7 +10,6 @@ on:
 
 permissions:
   contents: write
-  workflows: write  # Required for tag operations
 
 jobs:
   build:
@@ -19,7 +18,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Required for tag operations
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Git Tag
