--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ android.nonFinalResIds=false
 
 #android.aapt2FromMavenOverride=/data/data/com.termux/files/usr/bin/aapt2
 
-android.aapt2FromMavenOverride=/root/android-sdk/aapt/aapt2
+#android.aapt2FromMavenOverride=/root/android-sdk/aapt/aapt2
 org.gradle.parallel=false
 org.gradle.daemon=false
 # CORRECT FORMAT:
