--- a/.github/workflows/Fix-app.yml
+++ b/.github/workflows/Fix-app.yml
@@ -5,9 +5,9 @@ on:
   workflow_dispatch:
     inputs:
       version_tag:
-        description: 'Version tag (fix-5.3.0)'
+        description: 'Version tag (5.4.0.r1)'
         required: true
-        default: 'fix-5.3.0'
+        default: '5.4.0.r1'
 
 permissions:
   contents: write
@@ -43,18 +43,16 @@ jobs:
           tag_name: ${{ github.event.inputs.version_tag }}
           name: XoDos ${{ github.event.inputs.version_tag }}
           files: |
-            Fix-Phantom-killer.apk
+            XoDos-5.4.0-full-arm64.apk
           body: | 
-            New fix phantom process killer for Android 11+
+           **New XoDos Emulator arm64**
             What's new?
-            - easy App to disable phantom process killer 
-            or the error message from termux and XoDos Saying process complete signal 9
-            that close the app randomly after some time
+            - 
             
             **Credits:**
             Team: @xodiosx🇾🇪 & @DevArys🇨🇴 & @Mondo67244🇲🇫 & @Aurora0y🇧🇷 & @Chest1902🇧🇩 & @jiaxinchen-max 🇨🇳  & @Snap888🇷🇺
             Logo designer: @xl_v6/ashen🇮🇶
-            phantom-fix idea 💡:vmos-vm🇨🇳 & Rafat🇮🇶
+            
             
             **Support:**
             Telegram: https://t.me/xodemulatorr
